--- a/.config
+++ b/.config
@@ -74,6 +74,7 @@ CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
